<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>CommonJava8v2</groupId>
  <artifactId>CommonJava8v2</artifactId>
  <version>0.1</version>

  <properties>
  	<maven.compiler.source>1.8</maven.compiler.source>
  	<maven.compiler.target>1.8</maven.compiler.target>
  </properties>

  <dependencies>
	<!-- https://mvnrepository.com/artifact/com.google.firebase/firebase-admin -->
	<dependency>
	    <groupId>com.google.firebase</groupId>
	    <artifactId>firebase-admin</artifactId>
	    <version>9.4.3</version>
	</dependency>

	<!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api -->
	<dependency>
	    <groupId>org.junit.jupiter</groupId>
	    <artifactId>junit-jupiter-api</artifactId>
	    <version>5.13.0-M3</version>
	    <scope>test</scope>
	</dependency>

	<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-text -->
	<dependency>
	    <groupId>org.apache.commons</groupId>
	    <artifactId>commons-text</artifactId>
	    <version>1.13.1</version>
	</dependency>

	<!-- https://mvnrepository.com/artifact/ch.qos.logback/logback-classic -->
	<dependency>
	    <groupId>ch.qos.logback</groupId>
	    <artifactId>logback-classic</artifactId>
	    <version>1.5.18</version>
	    <scope>compile</scope>
	</dependency>

	<!-- https://mvnrepository.com/artifact/org.projectlombok/lombok -->
	<dependency>
	    <groupId>org.projectlombok</groupId>
	    <artifactId>lombok</artifactId>
	    <version>1.18.38</version>
	    <scope>provided</scope>
	</dependency>

	<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.dataformat/jackson-dataformat-xml -->
	<dependency>
	    <groupId>com.fasterxml.jackson.dataformat</groupId>
	    <artifactId>jackson-dataformat-xml</artifactId>
	    <version>2.19.0</version>
	</dependency>

	<!-- https://mvnrepository.com/artifact/jakarta.xml.bind/jakarta.xml.bind-api -->
	<dependency>
	    <groupId>jakarta.xml.bind</groupId>
	    <artifactId>jakarta.xml.bind-api</artifactId>
	    <version>4.0.2</version>
	</dependency>

	<!-- https://mvnrepository.com/artifact/org.glassfish.jaxb/jaxb-runtime -->
	<dependency>
	    <groupId>org.glassfish.jaxb</groupId>
	    <artifactId>jaxb-runtime</artifactId>
	    <version>4.0.5</version>
	</dependency>

	<!-- https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt-api -->
	<dependency>
	    <groupId>io.jsonwebtoken</groupId>
	    <artifactId>jjwt-api</artifactId>
	    <version>0.12.6</version>
	</dependency>

	<!-- 현시점 안정 버전이라고 함 -->
	<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents.client5/httpclient5 -->
	<dependency>
	    <groupId>org.apache.httpcomponents.client5</groupId>
	    <artifactId>httpclient5</artifactId>
	    <version>5.3.1</version>
	</dependency>
  </dependencies>

</project>